# JackerTracker

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  Main.h  States.cpp  States.h  StatesUtils.cpp  StatesUtils.h  TrackerKCF.cpp  TrackerKCF.h  Trackers.cpp  Trackers.h  TrackingWindow.cpp  TrackingWindow.h  VideoSource.cpp  VideoSource.h  featureColorName.cpp  opencl_kernels_tracking.cpp
Reader/: FFmpegDemuxer.h  NvDecoder.cpp  VideoReader.h
docs/: build.md
lib/fftw/: CMakeLists.txt
src/: Main.cpp  Main.h
src/Gui/: GuiButton.cpp  GuiButton.h  GuiButtonExpand.cpp  GuiButtonExpand.h  GuiElement.h  StateStack.cpp  StateStack.h  Timebar.cpp  Timebar.h  TrackingWindow.cpp  TrackingWindow.h
src/Model/: Calculator.cpp  Calculator.h  EventList.cpp  EventList.h  Model.h  Project.cpp  Project.h  TrackingEvent.cpp  TrackingEvent.h  TrackingRunner.cpp  TrackingRunner.h  TrackingSet.cpp  TrackingSet.h  TrackingStatus.cpp  TrackingStatus.h  TrackingTarget.cpp  TrackingTarget.h
src/Reader/: FFmpegDemuxer.h  NvCodecUtils.h  NvDecoder.cpp  NvDecoder.h  VideoReader.cpp  VideoReader.h  nv12_to_rgb.cu
src/States/: StateConfirm.cpp  StateConfirm.h  StateEditSet.cpp  StateEditSet.h  StateEditTracker.cpp  StateEditTracker.h  StateMulti.cpp  StateMulti.h  StatePlayer.cpp  StatePlayer.h  StateSelectRoi.cpp  StateSelectRoi.h  StateTracking.cpp  StateTracking.h  States.cpp  States.h
src/States/Set/: StateEditRange.cpp  StateEditRange.h  StateEditSet.cpp  StateEditSet.h
src/States/Tracking/: StateConfigTracker.cpp.txt  StateConfigTracker.h.txt  StateTestTrackers.cpp  StateTestTrackers.h  StateTracking.cpp  StateTracking.h  StateTrackingThreaded.cpp  StateTrackingThreaded.h
src/Tracking/: FrameCache.cpp  FrameCache.h  GpuTrackerGOTURN.cpp  GpuTrackerGOTURN.h  GpuTrackerPoints.cpp  GpuTrackerPoints.h  TrackerKCF.cpp  TrackerKCF.h  TrackerOpenCV.cpp  TrackerOpenCV.h  Trackers.cpp  Trackers.h
